Fix some missing descriptions

--- a/tokens/0xda6cb58a0d0c01610a29c5a65c303e13e885887c.yaml
+++ b/tokens/0xda6cb58a0d0c01610a29c5a65c303e13e885887c.yaml
@@ -2,7 +2,8 @@
 addr: '0xda6cb58a0d0c01610a29c5a65c303e13e885887c'
 decimals: 18
 description: >-
-  FILL ME IN
+  carVertical is a blockchain-based vehicle history registry. Tokens can used to purchase carVertical
+  services and to get paid for joining services.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2561085
 - Blog: https://www.carvertical.com/#blog
