--- a/tokens/0x358d12436080a01a16f711014610f8a4c2c2d233.yaml
+++ b/tokens/0x358d12436080a01a16f711014610f8a4c2c2d233.yaml
@@ -2,7 +2,9 @@
 addr: '0x358d12436080a01a16f711014610f8a4c2c2d233'
 decimals: 18
 description: >-
-  FILL ME IN
-links: []
+  Pundi X aims to make spending cryptocurrency as easy as buying a bottle of water. They already serve
+  600 physical merchants where users can use the Pundi-Pundi app to pay cashless.
+links:
+- Website: https://www.pundix.com
 name: Pundi X Token
 symbol: PXS
