--- a/tokens/0xa5f8fc0921880cb7342368bd128eb8050442b1a1.yaml
+++ b/tokens/0xa5f8fc0921880cb7342368bd128eb8050442b1a1.yaml
@@ -2,7 +2,9 @@
 addr: '0xa5f8fc0921880cb7342368bd128eb8050442b1a1'
 decimals: 18
 description: >-
-  FILL ME IN
-links: []
+  BlockArray is a blockchain-based startup focused on developing the protocols and infrastructure required
+  for supply chain and logistic companies to integrate distributed ledger technology across their business.
+links:
+- Website: https://blockarray.com
 name: Block Array
 symbol: ARY
