--- a/tokens/0x1776e1f26f98b1a5df9cd347953a26dd3cb46671.yaml
+++ b/tokens/0x1776e1f26f98b1a5df9cd347953a26dd3cb46671.yaml
@@ -2,7 +2,7 @@
 addr: '0x1776e1f26f98b1a5df9cd347953a26dd3cb46671'
 decimals: 18
 description: >-
-  FILL ME IN
+  Numerai is new kind of hedge fund built by a network of data scientists.
 links:
 - Blog: https://medium.com/@Numerai
 - CoinMarketCap: numeraire
@@ -12,3 +12,4 @@ links:
 - Whitepaper: https://numer.ai/whitepaper.pdf
 name: Numeraire
 symbol: NMR
+
