--- a/tokens/0x29d75277ac7f0335b2165d0895e8725cbf658d73.yaml
+++ b/tokens/0x29d75277ac7f0335b2165d0895e8725cbf658d73.yaml
@@ -2,7 +2,9 @@
 addr: '0x29d75277ac7f0335b2165d0895e8725cbf658d73'
 decimals: 8
 description: >-
-  FILL ME IN
+  BitDice Casino is a established and profitably operating cryptocurrency
+  casino that wants to transform itself into a new-generation platform for
+  online gaming experience.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2047543.0
 - Blog: https://medium.com/@bitdice
