--- a/tokens/0x2edc6fcc641f0169d54abb842f96f701eae85e4e.yaml
+++ b/tokens/0x2edc6fcc641f0169d54abb842f96f701eae85e4e.yaml
@@ -2,8 +2,7 @@
 __FORKDELTA_CUSTOM_SYMBOL: ADUOLD
 addr: '0x2edc6fcc641f0169d54abb842f96f701eae85e4e'
 decimals: 18
-description: >-
-  FILL ME IN
+description: ""
 links: []
 name: Aducoin
 symbol: ADU
