--- a/tokens/0x8f3470a7388c05ee4e7af3d01d8c722b0ff52374.yaml
+++ b/tokens/0x8f3470a7388c05ee4e7af3d01d8c722b0ff52374.yaml
@@ -2,7 +2,7 @@
 addr: '0x8f3470a7388c05ee4e7af3d01d8c722b0ff52374'
 decimals: 18
 description: >-
-  FILL ME IN
+  Veritaseum enables software-driven P2P capital markets without brokerages, banks or traditional exchanges
 links:
 - Blog: http://veritas.veritaseum.com/index.php/blog
 - CoinMarketCap: Veritaseum
