--- a/tokens/0xb4bfa6b45e25ad12bb033ec8a5eff523b83cc9af.yaml
+++ b/tokens/0xb4bfa6b45e25ad12bb033ec8a5eff523b83cc9af.yaml
@@ -1,8 +1,8 @@
 ---
 addr: '0xb4bfa6b45e25ad12bb033ec8a5eff523b83cc9af'
 decimals: 18
-description: >-
-  FILL ME IN
+description: ""
 links: []
 name: UAHPAY
 symbol: UAHPAY
+
