--- a/tokens/0xc596bd09d652827b0106292d3e378d5938df4b12.yaml
+++ b/tokens/0xc596bd09d652827b0106292d3e378d5938df4b12.yaml
@@ -2,8 +2,9 @@
 addr: '0xc596bd09d652827b0106292d3e378d5938df4b12'
 decimals: 18
 description: >-
-  FILL ME IN
+  A driving force behind the GNP of a real cash virtual goods economy.
 links:
 - Website: https://neverdie.com
 name: Teleport
 symbol: TPT
+
