--- a/tokens/0x52514e3acaeb06cab050a69b025083082ebe5b54.yaml
+++ b/tokens/0x52514e3acaeb06cab050a69b025083082ebe5b54.yaml
@@ -2,8 +2,7 @@
 __FORKDELTA_CUSTOM_SYMBOL: CTCOLD
 addr: '0x52514e3acaeb06cab050a69b025083082ebe5b54'
 decimals: 4
-description: >-
-  FILL ME IN
+description: ""
 links: []
 name: CARBON TOKEN CLASSIC
 symbol: CTC
