--- a/tokens/0x6e58b4c41cab75dc0239938bf5455ab8823ee4de.yaml
+++ b/tokens/0x6e58b4c41cab75dc0239938bf5455ab8823ee4de.yaml
@@ -2,8 +2,7 @@
 __FORKDELTA_CUSTOM_SYMBOL: B2XOLD
 addr: '0x6e58b4c41cab75dc0239938bf5455ab8823ee4de'
 decimals: 8
-description: >-
-  FILL ME IN
+description: ""
 links: []
 name: BTC2X
 symbol: B2X
