--- a/tokens/0x8bbf4dd0f11b3a535660fd7fcb7158daebd3a17e.yaml
+++ b/tokens/0x8bbf4dd0f11b3a535660fd7fcb7158daebd3a17e.yaml
@@ -2,8 +2,7 @@
 __FORKDELTA_CUSTOM_SYMBOL: EGASOLD
 addr: '0x8bbf4dd0f11b3a535660fd7fcb7158daebd3a17e'
 decimals: 8
-description: >-
-  FILL ME IN
+description: ""
 links: []
 name: ETHGAS
 symbol: EGAS
