--- a/tokens/0xa54ddc7b3cce7fc8b1e3fa0256d0db80d2c10970.yaml
+++ b/tokens/0xa54ddc7b3cce7fc8b1e3fa0256d0db80d2c10970.yaml
@@ -2,9 +2,10 @@
 addr: '0xa54ddc7b3cce7fc8b1e3fa0256d0db80d2c10970'
 decimals: 18
 description: >-
-  FILL ME IN
+  A driving force behind the GNP of a real cash virtual goods economy.
 links:
 - CoinMarketCap: neverdie
 - Website: https://neverdie.com
 name: NEVERDIE
 symbol: NDC
+
