--- a/tokens/0xf4522eda455814d43b003bc1c38501b04d65cc4a.yaml
+++ b/tokens/0xf4522eda455814d43b003bc1c38501b04d65cc4a.yaml
@@ -1,8 +1,7 @@
 ---
 addr: '0xf4522eda455814d43b003bc1c38501b04d65cc4a'
 decimals: 18
-description: >-
-  FILL ME IN
+description: ""
 links:
 - Blog: https://medium.com/@peter.cornforth/staticoin-a-stable-digital-currency-d52477f378de
 - Email: mailto:genkifs@gmail.com
@@ -12,3 +11,4 @@ links:
 - Website: http://staticoin.com/
 name: CAD Risk
 symbol: CAD_R
+
