--- a/tokens/0xbf2179859fc6d5bee9bf9158632dc51678a4100e.yaml
+++ b/tokens/0xbf2179859fc6d5bee9bf9158632dc51678a4100e.yaml
@@ -2,7 +2,7 @@
 addr: '0xbf2179859fc6d5bee9bf9158632dc51678a4100e'
 decimals: 18
 description: >-
-  ælf, is a decentralized self-evolving cloud computing network. To establish
+  ælf is a decentralized self-evolving cloud computing network. To establish
   a Blockchain infrastructure for various commercial requirements, ælf provides
   a highly efficient multi-chain parallel-processing system with cross-chain
   communication and self-evolving governance. It brings three innovations
