--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
   - pip install -r scripts/requirements.txt
 
 script:
-  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | echo "Testing tokens: "
+  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/
   - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs python scripts/test.py
-  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs yamllint -c .yamllint 
+  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs yamllint -c .yamllint
