--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 ---
 language: python
 python: "3.6"
+before_install:
+  - |
+    git diff --name-only $TRAVIS_COMMIT_RANGE | grep -q tokens/ || {
+      echo "No updates to token files, skipping build."
+      exit
+    }
+
 install:
   - pip install yamllint
   - pip install -r scripts/requirements.txt
