--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 install:
   - pip install yamllint
   - pip install -r scripts/requirements.txt
+cache: pip
 
 script:
   - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/
