Add token file tests (#26)
* Create a listing tester

* Improve test output format

* Catch and wrap request errors

* Only test token files that changed

* Test contract ERC20 compliance; move to web3 to call methods

* Fix Travis config

* Skip Travis builds when no token files were changed

* Travis: cache pip installed dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 ---
 language: python
 python: "3.6"
+before_install:
+  - |
+    git diff --name-only $TRAVIS_COMMIT_RANGE | grep -q tokens/ || {
+      echo "No updates to token files, skipping build."
+      exit
+    }
+
 install:
   - pip install yamllint
+  - pip install -r scripts/requirements.txt
+cache: pip
 
 script:
-  - yamllint -c .yamllint tokens/
+  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/
+  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs python scripts/test.py
+  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs yamllint -c .yamllint
