--- a/tokens/0xe25bcec5d3801ce3a794079bf94adf1b8ccd802d.yaml
+++ b/tokens/0xe25bcec5d3801ce3a794079bf94adf1b8ccd802d.yaml
@@ -11,12 +11,12 @@ links:
 - Email: mailto:public@matrix.space
 - Facebook: https://www.facebook.com/MatrixAINetworks
 - Github: https://github.com/MatrixAINetwork
-- Linkedin: http://www.linkedin.com/company/matrixainetwork
+- Linkedin: https://www.linkedin.com/company/matrixainetwork
 - Reddit: https://www.reddit.com/r/MatrixAINetwork
 - Telegram: https://t.me/matrixainetwork
 - Twitter: https://twitter.com/MatrixAINetwork
-- Website: https://www.matrix.space/
-- Whitepaper: https://www.matrix.space/skin/video/Matrix%20Business%20White%20Paper%20EN-V1.pdfA
-- Whitepaper: https://www.matrix.space/skin/video/Matrix%20Technical%20White%20Paper%20-%20V1.0.pdf
+- Website: https://www.matrixchain.io/
+- Whitepaper: https://www.matrixchain.io/static/pdf/MATRIXBusinessWhitePaper.pdf
+- Whitepaper: https://www.matrixchain.io/static/pdf/MATRIXTechnicalWhitePaper.pdf
 name: MATRIX AI Network
 symbol: MAN
