--- a/tokens/0x05d379b48a8622ae4018309e116420db4a38a225.yaml
+++ b/tokens/0x05d379b48a8622ae4018309e116420db4a38a225.yaml
@@ -8,5 +8,6 @@ links:
 - Telegram: https://t.me/joinchat/E6tXj0dThqzzjVlWJRuxLw
 - Website: https://www.elyte.biz
 - Whitepaper: https://main.elyte.biz/?page_id=9
+- BitcoinTalk: https://bitcointalk.org/index.php?topic=2618851
 name: EthereumLyte
 symbol: ELYTE
