--- a/tokens/0x05d379b48a8622ae4018309e116420db4a38a225.yaml
+++ b/tokens/0x05d379b48a8622ae4018309e116420db4a38a225.yaml
@@ -8,6 +8,7 @@ links:
 - Telegram: https://t.me/joinchat/E6tXj0dThqzzjVlWJRuxLw
 - Website: https://www.elyte.biz
 - Whitepaper: https://main.elyte.biz/?page_id=9
-- BitcoinTalk: https://bitcointalk.org/index.php?topic=2618851
+- Bitcointalk: https://bitcointalk.org/index.php?topic=2618851
+- Etherscan: https://etherscan.io/address/0x05d379b48a8622ae4018309e116420db4a38a225#code
 name: EthereumLyte
 symbol: ELYTE
