--- a/tokens/0x05d379b48a8622ae4018309e116420db4a38a225.yaml
+++ b/tokens/0x05d379b48a8622ae4018309e116420db4a38a225.yaml
@@ -9,6 +9,6 @@ links:
 - Website: https://www.elyte.biz
 - Whitepaper: https://main.elyte.biz/?page_id=9
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2618851
-- Github: https://www.github/com/philicibine/EthereumLyte
+- Github: https://www.github.com/philicibine/EthereumLyte
 name: EthereumLyte
 symbol: ELYTE
