Use HTTPS for Blockport (BPRT aka BPT) Whitepaper link

--- a/tokens/0x327682779bab2bf4d1337e8974ab9de8275a7ca8.yaml
+++ b/tokens/0x327682779bab2bf4d1337e8974ab9de8275a7ca8.yaml
@@ -15,6 +15,6 @@ links:
 - Telegram: https://t.me/blockport
 - Twitter: https://twitter.com/BlockportNL
 - Website: https://blockport.io/
-- Whitepaper: http://blockport.io/read-the/whitepaper.pdf
+- Whitepaper: https://blockport.io/read-the/whitepaper.pdf
 name: Blockport Token
 symbol: BPT
