Use the full CoinMarketCap link for Wax (WAX) Token

--- a/tokens/0x39bb259f66e1c59d5abef88375979b4d20d98022.yaml
+++ b/tokens/0x39bb259f66e1c59d5abef88375979b4d20d98022.yaml
@@ -13,7 +13,7 @@ description: >-
 links:
 - Blog: https://medium.com/wax-io/
 - Blog: https://medium.com/waxtoken
-- CoinMarketCap: wax
+- CoinMarketCap: https://coinmarketcap.com/currencies/wax/
 - Email: mailto:support@wax.io
 - Facebook: https://www.facebook.com/WAX.io.Community/
 - Github: https://github.com/waxio
