--- a/tokens/0xa65ee5fd259d94294c4ef030d1a62eeb465b9438.yaml
+++ b/tokens/0xa65ee5fd259d94294c4ef030d1a62eeb465b9438.yaml
@@ -1,4 +1,4 @@
---
+---
 addr: '0xa65ee5fd259d94294c4ef030d1a62eeb465b9438'
 decimals: 9
 description: >-
@@ -13,7 +13,7 @@ links:
 - Github: https://github.com/etherball
 - Telegram: https://t.me/Etherball
 - Twitter: https://twitter.com/etherball
-- Website: http://www.etherball.net
-- Whitepaper: http://etherball.net/Etherball.pdf
+- Website: https://www.etherball.net
+- Whitepaper: https://etherball.net/Etherball.pdf
 name: Etherball
 symbol: EBYTE
