--- a/tokens/0xC4A86561cb0b7EA1214904f26E6D50FD357C7986.yaml
+++ b/tokens/0xC4A86561cb0b7EA1214904f26E6D50FD357C7986.yaml
@@ -9,6 +9,7 @@ links:
 - Email: mailto:mail@charg.io
 - Github: https://www.charg.io/downloads
 - Telegram: https://t.me/ChargChat
+- Facebook: https://www.facebook.com/ChargCoin/
 - Twitter: https://twitter.com/charg_io?lang=en
 - Website: https://www.charg.io/
 - YouTube: https://www.youtube.com/channel/UCf8IU41uJ0h5TqhpftKwD_Q/featured
