--- a/tokens/0x3a1237d38d0fb94513f85d61679cad7f38507242.yaml
+++ b/tokens/0x3a1237d38d0fb94513f85d61679cad7f38507242.yaml
@@ -1,8 +1,7 @@
 ---
 addr: '0x3a1237d38d0fb94513f85d61679cad7f38507242'
 decimals: 18
-description: >-
-  With 100 million units available at Mindex Initial Coin Offering (ICO), Mindex is opening doors to a new route and a new chapter in the history of cryptocurrency. 
+description: Mindexcoin is opening doors to a new route and a new chapter in the history of cryptocurrency. 
 links:
 - Blog: https://medium.com/@mindexcoin
 - Github: https://github.com/mindexcoin/Mindexcoin
