--- a/tokens/0x3a1237d38d0fb94513f85d61679cad7f38507242.yaml
+++ b/tokens/0x3a1237d38d0fb94513f85d61679cad7f38507242.yaml
@@ -7,7 +7,7 @@ links:
 - Github: https://github.com/mindexcoin/Mindexcoin
 - Twitter: https://twitter.com/mindexcoin
 - Facebook: https://facebook.com/mindexcoin
-- Website: http://www.mindexcoin.com
+- Website: https://mindexcoin.com
 - Whitepaper: https://mindexcoin.org/Mindexcoin_White_Paper.pdf
 name: Mindexcoin
 symbol: MIC
