--- a/tokens/0xe6eFd46EB6CDd73A7fe1e760Fa0c25a299755a4B.yaml
+++ b/tokens/0xe6eFd46EB6CDd73A7fe1e760Fa0c25a299755a4B.yaml
@@ -2,7 +2,7 @@
 addr: '0xe6eFd46EB6CDd73A7fe1e760Fa0c25a299755a4B'
 decimals: 8
 description: >-
-We propose to create a global love coin that will allow the use of cryptocurrencies as a method of sending love everywhere in the world. we envisage millions of love tokens being send around the world. Lovers will be able to send it to anyone on special days like valentine day, mothers day, etc.
+    We propose to create a global love coin that will allow the use of cryptocurrencies as a method of sending love everywhere in the world. We envisage millions of love tokens being send around the world.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2942750
 - Email: mailto:lovetoken@remedcu.com
