--- a/tokens/0x6a09e1b7cc5cb52ffdfc585a8df51ced7063915c.yaml
+++ b/tokens/0x6a09e1b7cc5cb52ffdfc585a8df51ced7063915c.yaml
@@ -1,7 +1,6 @@
 ---
 addr: '0x6a09e1b7cc5cb52ffdfc585a8df51ced7063915c'
 decimals: 18
-description: 
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2676153.0
 - Email: mailto:team@ravelous.com
@@ -10,6 +9,6 @@ links:
 - Discord: https://discordapp.com/invite/fKjGx78
 - Telegram: https://t.me/ravelous
 - Twitter: https://twitter.com/ravelousmarket
-- Website: http://ravelous.com/
+- Website: https://ravelous.com/
 name: Ravelous
 symbol: RAVE
