Several Travis CI fixes.

--- a/tokens/0xcbc99b988301df3bccfc1dca3706019c336f47f6.yaml
+++ b/tokens/0xcbc99b988301df3bccfc1dca3706019c336f47f6.yaml
@@ -5,6 +5,6 @@ description: >-
   Rekt Coin for the RektEx Forum.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2759524
-- Website: https://rektex.com
+- Website: http://rektex.com
 name: Rekt Coin
 symbol: REKT
