--- a/tokens/0xdb8646f5b487b5dd979fac618350e85018f557d4.yaml
+++ b/tokens/0xdb8646f5b487b5dd979fac618350e85018f557d4.yaml
@@ -12,7 +12,7 @@ links:
 - Github: https://github.com/bitcoin-token
 - Reddit: https://www.reddit.com/r/BitcoinToken/
 - Telegram: https://t.me/joinchat/HLlnQw9SOw6HzYIehZOCMw
-- Twitter: http://www.twitter.com/bitcoin_token
+- Twitter: https://www.twitter.com/bitcoin_token
 - Website: https://btk.community
 name: BitcoinToken
 symbol: BTK
