--- a/tokens/0xc9d40360cac0d5fd69e9ddc2e32d9b683bb51ad4.yaml
+++ b/tokens/0xc9d40360cac0d5fd69e9ddc2e32d9b683bb51ad4.yaml
@@ -2,9 +2,11 @@
 addr: '0xc9d40360cac0d5fd69e9ddc2e32d9b683bb51ad4'
 decimals: 4
 description: >-
-ROICOIN is a standard ERC20 token powered by Ethereum smart contracts. ROICOIN offers you a very simple and easy way to make a profitable investment by buying & Holding ROI tokens on the platform. 
-Any coins that you have sitting on the platform will automatically earn you the new ROI coin according to the number of coins you hold on the platform. 
-The profit is added immediately and continuously. No minimum balance is required.
+  ROICOIN is a standard ERC20 token powered by Ethereum smart contracts. ROICOIN offers you a very simple
+  and easy way to make a profitable investment by buying & Holding ROI tokens on the platform. 
+  Any coins that you have sitting on the platform will automatically earn you the new ROI coin according
+  to the number of coins you hold on the platform. The profit is added immediately and continuously. No 
+  minimum balance is required.
 links:
 - Github: https://github.com/officialroicoin/roicoin
 - Twitter: https://twitter.com/officialroicoin
