Update and rename 0xa701122c1b67220a8B6883D03C8Ad67896B12466.yaml to 0xa701122c1b67220a8b6883d03c8ad67896b12466.yaml

--- a/tokens/0xa701122c1b67220a8b6883d03c8ad67896b12466.yaml
+++ b/tokens/0xa701122c1b67220a8b6883d03c8ad67896b12466.yaml
@@ -1,5 +1,5 @@
 ---
-addr: '0xa701122c1b67220a8B6883D03C8Ad67896B12466'
+addr: '0xa701122c1b67220a8b6883d03c8ad67896b12466'
 decimals: 8
 description: Fan made promo meme token for the mineable BroFistCoin (BFC) cryptocurrency
 name: BroFistCoin
@@ -10,7 +10,7 @@ links:
 - Website: http://brofistcoin.io/
 - Reddit: https://www.reddit.com/r/BrofistCoin/
 - Facebook: https://www.facebook.com/BroFistCoin/
-- Youtube: https://www.youtube.com/watch?v=Jz50eTT6y8g
+- YouTube: https://www.youtube.com/watch?v=Jz50eTT6y8g
 notice: >-
     PEW is a meme token and comes with no guarantees. It's a fan made joke token
     to honor PewDiePie who clearly knows de wae.
