Fix two token yaml issues.

--- a/tokens/0x56b6431f45d08eed55f34371386326c739eacbcc.yaml
+++ b/tokens/0x56b6431f45d08eed55f34371386326c739eacbcc.yaml
@@ -10,7 +10,7 @@ description: >-
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2659058.0
 - Github: https://github.com/ethermeta/EtherMeta/blob/master/SmartContract
-- Reddit: https://www.reddit.com/r/CryptoCurrency/comments/7mj2gf/ethereum_meta_untraceable_transactions/?st=jbqrkf9c&sh=c8fd0713
+- Reddit: https://www.reddit.com/r/CryptoCurrency/comments/7mj2gf/ethereum_meta_untraceable_transactions/
 - Telegram: https://t.me/ethereummeta
 - Twitter: https://twitter.com/EthereumMeta
 - Website: https://ethermeta.com/
