--- a/tokens/0xc9d40360cac0d5fd69e9ddc2e32d9b683bb51ad4.yaml
+++ b/tokens/0xc9d40360cac0d5fd69e9ddc2e32d9b683bb51ad4.yaml
@@ -11,5 +11,9 @@ links:
 - Github: https://github.com/officialroicoin/roicoin
 - Twitter: https://twitter.com/officialroicoin
 - Website: https://www.roicoin.io/
+notice: >-
+The last couple of months the ROICOIN team has been working hard to perform a ROICOIN upgrade. 
+what this upgrade is all about? In short it means we had to rewrite the smart contract , to make it ‘future-proof’. 
+<a href="https://www.roicoin.io/blog.html">Read the announcement.</a>
 name: ROICOIN
 symbol: ROI
