--- a/tokens/0xc7bba5b765581efb2cdd2679db5bea9ee79b201f.yaml
+++ b/tokens/0xc7bba5b765581efb2cdd2679db5bea9ee79b201f.yaml
@@ -7,7 +7,7 @@ description: >-
   on top of the Gems Protocol which pairs workers and requesters for micro tasks.
 links:
 - Blog: https://blog.gems.org/
-- CoinMarketCap: gems-protocol
+- CoinMarketCap: https://coinmarketcap.com/currencies/gems-protocol/
 - Reddit: https://www.reddit.com/r/GemsProtocol/
 - Twitter: https://twitter.com/gems
 - Website: https://www.gems.org/
