Restore contract address, fix notice to not be promo.

--- a/tokens/0xa25d01d15fc0e3cdede1bebee4124394aae0db33.yaml
+++ b/tokens/0xa25d01d15fc0e3cdede1bebee4124394aae0db33.yaml
@@ -1,7 +1,8 @@
 ---
-addr: '0x0200412995f1bafef0d3f97c4e28ac2515ec1ece'
+addr: '0xa25d01d15fc0e3cdede1bebee4124394aae0db33'
 decimals: 18
 description: >-
+  <strong>This is the old Follow Coin address.</strong>
   Follow Coin is a new platform that wants to make the crypto world accessible to everyone. Our goal is
   to lower the barriers of crypto investment markets by providing tools and services that make interacting,
   handling and trading crypto coins easy. For people that are new to the world of cryptocurrency it is
@@ -22,7 +23,7 @@ links:
 - Website: https://followcoin.io/
 - Whitepaper: https://followcoin.io/docs/followcoin-whitepaper.pdf
 notice: >-
-  The last couple of months the Follow Coin team has been working hard to perform a token upgrade. But what does this mean? In short it means we had to rewrite the smart contract for the barebone of the Follow Coin token, to make it ‘future-proof’. It solves the transfer-issues (withdrawing, depositing and sending) that the current contract is suffering from.
+  Follow Coin team has updated the contract address.
   <a href="https://medium.com/@followcoin/follow-coin-goes-erc-223-54b23972cac6">Read the announcement.</a>
 name: Follow Coin
 symbol: FLLW
