Change notice wording a bit.

--- a/tokens/0xa25d01d15fc0e3cdede1bebee4124394aae0db33.yaml
+++ b/tokens/0xa25d01d15fc0e3cdede1bebee4124394aae0db33.yaml
@@ -23,7 +23,7 @@ links:
 - Website: https://followcoin.io/
 - Whitepaper: https://followcoin.io/docs/followcoin-whitepaper.pdf
 notice: >-
-  Follow Coin team has updated the contract address.
-  <a href="https://medium.com/@followcoin/follow-coin-goes-erc-223-54b23972cac6">Read the announcement.</a>
+  This is the old Follow Coin contract. The team has updated the contract address:
+  <a href="https://medium.com/@followcoin/follow-coin-goes-erc-223-54b23972cac6">read the announcement.</a>
 name: Follow Coin
 symbol: FLLW
