--- a/tokens/0x2Af989200e9CD8D3404B5b40f5e2f896302d9AA5.yaml
+++ b/tokens/0x2Af989200e9CD8D3404B5b40f5e2f896302d9AA5.yaml
@@ -1,5 +1,5 @@
 ---
-addr: '0x2Af989200e9CD8D3404B5b40f5e2f896302d9AA5'
+addr: '0x2af989200e9cd8d3404b5b40f5e2f896302d9aa5'
 decimals: 8
 description: >-
   Ecocrypto was established as a financial institution and has sharpened the business to become a decentralized Open source credit and Big Data Bureau on blockchain. Ecocrypto provides Individuals and SMEs with short-term loans as the best solution for their financial problems. Ecocrypto uses innovative risk scoring implemented by artificial neural network. Ecocrypto utilizes the power of Blockchain Technology as a tool to create the next generation of money and finance.
@@ -8,7 +8,7 @@ links:
 - Facebook: https://www.facebook.com/EcoCrypto/
 - Github: https://github.com/EcoCryptoGithub/Ecocrypto
 - Telegram: https://t.me/joinchat/AAAAAFIZi4HDO6_CFAhVZA
-- Website: https://https://ecocrypto.io
+- Website: https://ecocrypto.io
 - YouTube: https://www.youtube.com/channel/UCt67ZuES3mknk_LJaX10J2w?view_as=subscriber
 name: Ecocrypto
 symbol: ECO
