--- a/tokens/0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca.yaml
+++ b/tokens/0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca.yaml
@@ -1,9 +1,9 @@
 ---
- addr: '0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca'
+ addr: 0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca
  decimals: 18
  description: >-
- Span Coin is part of under development project for company Spanvent the token itself was a new idea added recently to the project to provide digital currency payment and support development Spanvent project is musical platform and booking agency for artists and musicians, will work as end to end customer to supplier platform for hiring and selling composed music or tracks, in addition to publishing events worldwide and promoting the events or artists themselves Span Coin will be treated as payment method for some of the service and mandatory for payment in other service on platform also holding Span Coin with amount more than 500,000 will give you ability to withdraw dividends from profit made by spanvent regularly every 3 months.
- links:
+ Span Coin the currency of Spanvent musical platform and booking agency
+links:
  - Youtube: https://www.youtube.com/channel/UCMhttNMpuCoQDZ0G2hpKEbQ
  - Facebook: https://www.facebook.com/Spancoin/
  - Telegram: https://t.me/Spancoin
