--- a/tokens/0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca.yaml
+++ b/tokens/0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca.yaml
@@ -1,14 +1,15 @@
 ---
- addr: 0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca
- decimals: 18
- description: >-
+addr: '0x3C63d4b0330a1AB969fF0F8B2ba227540a15b0cA'
+decimals: 18
+name: Span Coin
+symbol: SPAN
+description: >-
  Span Coin the currency of Spanvent musical platform and booking agency
 links:
- - Youtube: https://www.youtube.com/channel/UCMhttNMpuCoQDZ0G2hpKEbQ
- - Facebook: https://www.facebook.com/Spancoin/
- - Telegram: https://t.me/Spancoin
- - Twitter: https://twitter.com/Spancoin
- - Website: www.span-coin.com
- - Whitepaper: www.span-coin.com/SpanCoinWhitepaper.pdf
- name: Span Coin
- symbol: SPAN
+- Youtube: https://www.youtube.com/channel/UCMhttNMpuCoQDZ0G2hpKEbQ
+- Facebook: https://www.facebook.com/Spancoin/
+- Telegram: https://t.me/Spancoin
+- Twitter: https://twitter.com/Spancoin
+- Website: www.span-coin.com
+- Whitepaper: www.span-coin.com/SpanCoinWhitepaper.pdf
+
