--- a/tokens/0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca.yaml
+++ b/tokens/0x3c63d4b0330a1ab969ff0f8b2ba227540a15b0ca.yaml
@@ -6,7 +6,7 @@ symbol: SPAN
 description: >-
  Span Coin the currency of Spanvent musical platform and booking agency
 links:
-- Youtube: https://www.youtube.com/channel/UCMhttNMpuCoQDZ0G2hpKEbQ
+- YouTube: https://www.youtube.com/channel/UCMhttNMpuCoQDZ0G2hpKEbQ
 - Facebook: https://www.facebook.com/Spancoin/
 - Telegram: https://t.me/Spancoin
 - Twitter: https://twitter.com/Spancoin
