Updated the name of Youtube to YouTube

--- a/tokens/0xb510788cbb9aea54221d3dc8cce2dff629a1dbf7.yaml
+++ b/tokens/0xb510788cbb9aea54221d3dc8cce2dff629a1dbf7.yaml
@@ -13,6 +13,6 @@ links:
 - Facebook: https://www.facebook.com/Love-Token-348406965665395
 - Reddit: https://www.reddit.com/r/lovetokencrypto/
 - Linkedin: https://www.linkedin.com/company/lovetoken/
-- Youtube: https://www.youtube.com/channel/UCaltabUmxb8Cx_b7GlHLfVw
+- YouTube: https://www.youtube.com/channel/UCaltabUmxb8Cx_b7GlHLfVw
 name: LOVE Token
 symbol: LOVE
