Travis config: attempt to handle deleted files better

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ language: python
 python: "3.6"
 before_install:
   - |
-    git diff --name-only $TRAVIS_COMMIT_RANGE | grep -q tokens/ || {
+    git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep -q tokens/ || {
       echo "No updates to token files, skipping build."
       exit
     }
+  - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/
 
 install:
   - pip install yamllint
@@ -14,6 +15,5 @@ install:
 cache: pip
 
 script:
-  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/
-  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs python scripts/test.py
-  - git diff --name-only $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs yamllint -c .yamllint
+  - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs python scripts/test.py
+  - git diff --name-only --diff-filter=d $TRAVIS_COMMIT_RANGE | grep tokens/ | xargs yamllint -c .yamllint
