--- a/tokens/0xc3aef0036f5b146440775b2a1d5bf45fd8992741.yaml
+++ b/tokens/0xc3aef0036f5b146440775b2a1d5bf45fd8992741.yaml
@@ -13,7 +13,6 @@ links:
 - Website: https://www.roicoin.io/
 notice: >-
   The last couple of months the ROICOIN team has been working hard to perform a ROICOIN upgrade.
-  what this upgrade is all about? In short it means we had to rewrite the smart contract , to make it ‘future-proof’.
-  <a href="https://www.roicoin.io/blog.html">Read the announcement.</a>
+  What this upgrade is all about? <a href="https://www.roicoin.io/blog.html">Read the announcement.</a>
 name: ROICOIN
 symbol: ROI
