--- a/tokens/0xca6f6e8be2fc32946d8a92f7452578a8170ca97.yaml
+++ b/tokens/0xca6f6e8be2fc32946d8a92f7452578a8170ca97.yaml
@@ -2,7 +2,7 @@
 addr: '0xca6f6e8be2fc32946d8a92f7452578a8170ca97'
 decimals: 18
 description: >-
-  The leading way to send mobile top-ups recharges to over 4.5 billion mobile phones worldwide, in real-time. According to experts, in two years, the number of mobile subscribers will be up to 10 billion so we are undeniable that the important role of mobile communication. To meet the customer need become higher and higher, mobile top-up store gave useful solution for maintaining the mobile phone lifeblood. America, Europe and Africa will observe significant growth for mobile airtime top-ups with technological innovation and focus on interoperability emerging as prominent trends by 2018.
+  MobileRechargez.com is a global website specialized in supplying online top up service with over 120 countries.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=3025064
 - Telegram: https://t.me/joinchat/H6_LWxIy_cMFOLo0Rf3wQA
