--- a/tokens/0x87c8d6da29c030aae4d8ecb77b2f488f529de1f5.yaml
+++ b/tokens/0x87c8d6da29c030aae4d8ecb77b2f488f529de1f5.yaml
@@ -4,7 +4,7 @@ decimals: 18
 description: >-
   HunterCoin token is an Ethereum-based ERC-20 Token that focuses on being a faster and cheaper currency
 links:
-- Twitter: https://twitter.com/HunterAirdrop
+- Twitter: https://twitter.com/HunterCoinToken
 - Telegram: https://t.me/HTCtoken
 - Blog: https://medium.com/@htctoken/what-is-huntercoin-29bcb2930195
 - Reddit: https://www.reddit.com/user/HTCToken/comments/82qw15/what_is_huntercoin/
