--- a/tokens/0x9a0242b7a33dacbe40edb927834f96eb39f8fbcb.yaml
+++ b/tokens/0x9a0242b7a33dacbe40edb927834f96eb39f8fbcb.yaml
@@ -1,5 +1,5 @@
 ---
-addr: '0x9a0242b7a33dacbe40edb927834f96eb39f8fbcb.yaml'
+addr: '0x9a0242b7a33dacbe40edb927834f96eb39f8fbcb'
 decimals: 18
 description: >-
   BABB is an open source, secentralised banking platform. Access to a bank account for P2P financial services for anyone in the world.
