--- a/tokens/0xe8fc7e1973496848fcb486c5bb880f68487ea0bb.yaml
+++ b/tokens/0xe8fc7e1973496848fcb486c5bb880f68487ea0bb.yaml
@@ -11,7 +11,7 @@ links:
 - Email: mailto:info@litecoinwplus.com
 - Telegram: https://t.me/joinchat/G9zlzBIfc72mKF69f4OJ_A
 - Twitter: https://twitter.com/LiteCoinW
-- Website: https://www.litecoinw.com/
+- Website: https://litecoinwplus.com/
 - Reddit: https://www.reddit.com/user/LiteCoinW/
 - Whitepaper: http://litecoinwplus.com/downloads/LiteCoinwPlus-Whitepaper-Rev1.pdf
 name: LiteCoinW Plus
