Use HTTPS link for whitepaper

--- a/tokens/0xe8fc7e1973496848fcb486c5bb880f68487ea0bb.yaml
+++ b/tokens/0xe8fc7e1973496848fcb486c5bb880f68487ea0bb.yaml
@@ -13,6 +13,6 @@ links:
 - Twitter: https://twitter.com/LiteCoinW
 - Website: https://litecoinwplus.com/
 - Reddit: https://www.reddit.com/user/LiteCoinW/
-- Whitepaper: http://litecoinwplus.com/downloads/LiteCoinwPlus-Whitepaper-Rev1.pdf
+- Whitepaper: https://litecoinwplus.com/downloads/LiteCoinwPlus-Whitepaper-Rev1.pdf
 name: LiteCoinW Plus
 symbol: LCWP
