Fix Lif Token .yaml file
- Removed Etherscan field.
- Fix Blog field.

--- a/tokens/0xeb9951021698b42e4399f9cbb6267aa35f82d59d.yaml
+++ b/tokens/0xeb9951021698b42e4399f9cbb6267aa35f82d59d.yaml
@@ -6,15 +6,14 @@ description: >-
   Líf is used by travel companies to distribute inventory and make transactions without intermediaries.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=1946065
-- Blog: https://windingtree.com/blog/
+- Blog: https://blog.windingtree.com
 - Email: mailto:support@windingtree.com
-- Facebook: https://www.facebook.com/WindingTree/
+- Facebook: https://www.facebook.com/WindingTree
 - Github: https://github.com/windingtree
 - Telegram: https://t.me/windingtree
 - Twitter: https://twitter.com/windingtree
 - Reddit: https://reddit.com/r/windingtree
 - Website: https://windingtree.com
-- Etherscan: https://etherscan.io/token/0xeb9951021698b42e4399f9cbb6267aa35f82d59d
 - Whitepaper: https://windingtree.com/files/White_Paper_EN.pdf
 name: Líf
 symbol: LIF
