Listing request - VETRA

--- a/tokens/0x7dcdbd2c6548774d301811658ddcb0e75eca9881.yaml
+++ b/tokens/0x7dcdbd2c6548774d301811658ddcb0e75eca9881.yaml
@@ -5,6 +5,7 @@ description: >-
 Crypto Payment Platform & The Trading Platform Token
 Driven By Community
 links:
+-E-mail : support@vetra.info
 -Website: https://vetra.info
 -Whitepaper : https://vetra.info/Whitepaper_Vetra.pdf
 -Forum : https://vetracommunity.info/
