--- a/tokens/0x41104c8d51a80d9e2969dc23256a352de4b0ec33.yaml
+++ b/tokens/0x41104c8d51a80d9e2969dc23256a352de4b0ec33.yaml
@@ -7,5 +7,5 @@ links:
 - Website: http://42plums.com/
 - Reddit: https://www.reddit.com/r/plumcoin
 - Bitcointalk: https://bitcointalk.org/index.php?topic=2994051
-name: PLUM: Payment Layer for Unattended Merchandising
+name: "PLUM: Payment Layer for Unattended Merchandising"
 symbol: PLUM
