Finish fixing Travis CI errors.

--- a/tokens/0x5fb6a842ea587fa8d0486589742ce68ef24834a4.yaml
+++ b/tokens/0x5fb6a842ea587fa8d0486589742ce68ef24834a4.yaml
@@ -10,7 +10,7 @@ links:
 - Facebook: https://www.facebook.com/RevizoRcoin
 - Github: https://github.com/RevizorCoin/coin
 - Telegram: https://t.me/revizorcoin
-- Twitter: https://twitter.com/RevizorCoin
+- Twitter: https://twitter.com/RevizorCoin_RR
 - Website: https://revizor-coin.io/
 - YouTube: https://www.youtube.com/channel/UCjD7LUQb4R7NU8_V9b3Cf0A
 - Whitepaper: https://revizor-coin.io/WHITE_PAPER_ENG.pdf
