--- a/tokens/0xfb2f26f266fb2805a387230f2aa0a331b4d96fba.yaml
+++ b/tokens/0xfb2f26f266fb2805a387230f2aa0a331b4d96fba.yaml
@@ -5,7 +5,7 @@ description: >-
   A new era of cloud computing services, powered by blockchain technology.
 links:
 - Blog: https://medium.com/@daditech
-- CoinMarketCap: dadi
+- CoinMarketCap: https://coinmarketcap.com/currencies/dadi/
 - Email: mailto:crowdsale@dadi.co
 - Facebook: https://www.facebook.com/daditechnology
 - Github: https://github.com/dadi
