--- a/tokens/0x63e634330a20150dbb61b15648bc73855d6ccf07.yaml
+++ b/tokens/0x63e634330a20150dbb61b15648bc73855d6ccf07.yaml
@@ -10,7 +10,7 @@ description: >-
   Blocklancer does this by minimalizing fees and introducing a decentralized tribunal system to guarantee every
   dispute case is settled fairly and that no one loses out — we can finally wave goodbye to fraud in freelancing.
 links:
-- Website: http://www.blocklancer.net/
+- Website: https://www.blocklancer.net/
 - Bitcointalk: https://bitcointalk.org/index.php?topic=1974481.0
 name: Lancer Token
 symbol: LNC
