--- a/tokens/0x95c4be8534d69c248c0623c4c9a7a2a001c17337.yaml
+++ b/tokens/0x95c4be8534d69c248c0623c4c9a7a2a001c17337.yaml
@@ -5,7 +5,7 @@ description: >-
   The ultimate Hardware Wallet with the most advanced level of security, designed for easy payments
   with over 350 cryptocurrency.
 links:
-- Website: http://www.hodler.tech/
+- Website: https://www.hodler.tech/
 - Bitcointalk: https://bitcointalk.org/index.php?topic=3070336.msg31633163
 name: HODLER.TECH
 symbol: HDL
