--- a/tokens/0x9a794Dc1939F1d78fa48613b89B8f9d0A20dA00E.yaml
+++ b/tokens/0x9a794Dc1939F1d78fa48613b89B8f9d0A20dA00E.yaml
@@ -11,7 +11,7 @@ links:
 - Telegram: https://t.me/joinchat/CzZcC0V06Q2R_67d9ePHyA
 - Twitter: https://twitter.com/arbidextoken?lang=en
 - Website: https://www.arbidex.uk.com/
-- Website: https://www.arbidex.uk.com
+- Bitcointalk: https://bitcointalk.org/index.php?topic=2536004.new#new
 - Whitepaper: https://www.arbidex.uk.com/assets/wp_en.pdf
 name: arbidex
 symbol: ABX
