--- a/tokens/0xb510788cbb9aea54221d3dc8cce2dff629a1dbf7.yaml
+++ b/tokens/0xb510788cbb9aea54221d3dc8cce2dff629a1dbf7.yaml
@@ -2,7 +2,9 @@
 addr: '0xb510788cbb9aea54221d3dc8cce2dff629a1dbf7'
 decimals: 8
 description: >-
-    We propose to create a global token that will allow the use of cryptocurrencies as a method of sending love everywhere in the world. We envisage millions of love tokens being send around the world.
+    We propose to create a global token that will allow the use of cryptocurrencies as a
+    method of sending love everywhere in the world. We envisage millions of love tokens being
+    send around the world.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=3118263.0
 - Email: mailto:admin@lovetoken.info
