--- a/tokens/0x65be44c747988fbf606207698c944df4442efe19.yaml
+++ b/tokens/0x65be44c747988fbf606207698c944df4442efe19.yaml
@@ -1,6 +1,5 @@
 ---
-__FORKDELTA_CUSTOM_SYMBOL: FUCK_OLD
-addr: '0xab16e0d25c06cb376259cc18c1de4aca57605589'
+addr: '0x65be44c747988fbf606207698c944df4442efe19'
 decimals: 4
 description: >-
   In today&rsquo;s society, we have an epidemic where millions of people have no fucks to give. With our
@@ -9,13 +8,15 @@ description: >-
   something to society.
 links:
 - Bitcointalk: https://bitcointalk.org/index.php?topic=1945661.0
-- CoinMarketCap: fucktoken
-- Email: mailto:support@fucktoken.io
+- CoinMarketCap: https://coinmarketcap.com/currencies/fucktoken
+- Email: mailto:contact@fucktoken.com
 - Reddit: https://www.reddit.com/r/FuckToken/
 - Slack: https://fucktoken.slack.com/join/shared_invite/MjMyNDgzNzc4MDY1LTE1MDM5Nzg2MTctY2FlOWMzMGNiMw
+- Slack: https://join.slack.com/t/fucktoken/shared_invite/MjE5NDYzNjUyOTAwLTE1MDEzMDIzOTgtMTE4YTk3NjM0MA
+- Telegram: https://t.me/FuckToken
 - Twitter: https://twitter.com/FuckToken
-- Website: http://fucktoken.io/
-- Website: http://www.fucktoken.io/
-- Whitepaper: http://fucktoken.io/FUCKToken_Whitepaper_V1.pdf
-name: FinallyUsableCryptoKarma
+- Website: https://www.fucktoken.com/
+- Whitepaper: https://fucktoken.com/download/FUCKToken_Whitepaper_V1.pdf
+- Blog: ADD OR DELETE LINE
+name: Finally Usable Crypto Karma
 symbol: FUCK
